udpate color names for hubs cloud theme update, fix toolbar getting squished due to extra content in room entry modal

--- a/src/react-components/room/ContentMenu.scss
+++ b/src/react-components/room/ContentMenu.scss
@@ -87,7 +87,7 @@
 
 /* TODO: change to theme color */
 :local(.notifier) {
-  color: #FF3464;
+  color: theme.$status-unread-color;
   font-size: 1.5em;
   margin-left: -8px;
 }
